--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer style="color: rgb(139, 130, 130); text-align: center;">&copy; all rights reserved 2024</footer>
   </body>
 </html>
